Fixing spacing and photos

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -14,7 +14,7 @@ body {
 img[src="/assets/images/tom.png"]{
   max-width: 20%;
   float: left;
-  padding: 10px;
+  margin: 10px;
   border-style: double;
 }
 
